# arch-taffybar

./: .gitmodules  arch-taffy.cabal  build  cabal.project  hie.yaml  taffybar.css  taffybar.hs
