name:                arch-taffy
version:             0.1.0.0
author:              francois
maintainer:          francois@mahoneko.net
build-type:          Simple
cabal-version:       >=1.10
                     
executable taffybar-x86_64
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , taffybar
                     , gi-cairo-render
                     , gi-gtk
                     , process
                     , text
                     , containers
                     , time
                     , transformers
                     , haskell-gi-base
  default-language:    Haskell2010



